<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/actionbar_search_icon"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <!--<item-->
        <!--android:id="@+id/action_add"-->
        <!--android:icon="@mipmap/actionbar_add_icon"-->
        <!--android:title="@string/action_add"/>-->

    <item
        android:id="@+id/action_group_chat"
        android:icon="@mipmap/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>

    <item
        android:id="@+id/action_add_friend"
        android:icon="@mipmap/menu_add_icon"
        android:title="@string/menu_addfriend"/>

    <item
        android:id="@+id/action_scan"
        android:icon="@mipmap/men_scan_icon"
        android:title="@string/menu_scan"/>

    <item
        android:id="@+id/action_feedback"
        android:icon="@mipmap/menu_feedback_icon"
        android:title="@string/menu_feedback"/>
</menu>