<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ms="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager_new"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.ms.awe.msshowtime.widget.ChangeColorIconWithText
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ms:color="#ff45c01a"
            ms:icon="@mipmap/ic_menu_start_conversation"
            ms:text="微信"
            ms:text_size="12sp" />

        <com.ms.awe.msshowtime.widget.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ms:color="#ff45c01a"
            ms:icon="@mipmap/ic_menu_friendslist"
            ms:text="@string/tab_contact"
            ms:text_size="12sp" />

        <com.ms.awe.msshowtime.widget.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ms:color="#ff45c01a"
            ms:icon="@mipmap/ic_menu_emoticons"
            ms:text="@string/tab_found"
            ms:text_size="12sp" />

        <com.ms.awe.msshowtime.widget.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ms:color="#ff45c01a"
            ms:icon="@mipmap/ic_menu_allfriends"
            ms:text="@string/tab_me"
            ms:text_size="12sp" />
    </LinearLayout>
</LinearLayout>